# StereoVision-SLAM

./: CMakeLists.txt  CMakeLists.txt.bak  build.sh  diagnose.sh
app/: CMakeLists.txt
config/stereo_slam_configs/: config-00.yaml
src/: loopclosure.cpp
